# multimodal-document-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  answer.py  documents.py  retrieval.py  search.py
app/chunking/: __init__.py  models.py  splitter.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  chunk.py  document.py
app/embeddings/: __init__.py  factory.py  models.py  provider.py  sentence_transformer_provider.py
app/llm/: factory.py  models.py  prompt_builder.py  provider.py
app/parsers/: __init__.py  pdf_parser.py
app/processing/: __init__.py  processor.py
app/reranking/: __init__.py  factory.py  models.py  provider.py
app/retrieval/: models.py
app/search/: models.py
app/services/: __init__.py  answer_service.py  chunk_service.py  rerank_service.py  retrieval_service.py  search_service.py  storage.py
migrations/: env.py
migrations/versions/: 7f565b36c262_add_vector_embeddings.py  d29a6a1ccd09_create_chunk_model.py  ef410fe2cd53_create_document_model.py
scripts/: verify_embeddings.py  verify_rag.py  verify_reranking.py  verify_retrieval.py  verify_vector_search.py  verify_vector_storage.py
tests/: conftest.py  test_answer_service.py  test_chunk_service.py  test_chunker.py  test_embedding_provider.py  test_rerank_service.py  test_retrieval_service.py  test_vector_persistence.py  test_vector_search.py
