[project]
name = "multimodal-document-intelligence"
version = "0.1.0"
description = "Enterprise Multimodal Document Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.4",
    "alembic>=1.13.2",
    "pgvector>=0.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

